tests/idris2/operators/operators004/expected
1/1: Building Test (Test.idr)
Error: Operator -:- is non-associative

Test:8:8--8:22
 4 | (-:-) : a -> List a -> List a
 5 | (-:-) = (::)
 6 | 
 7 | test : List Nat
 8 | test = 4 -:- 3 -:- []
            ^^^^^^^^^^^^^^

Possible solutions:
 - Add brackets around -:-
 - Change the fixity of -:- at Test:2:1--2:12 to `infixl` or `infixr`
